--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+header{
+  text-align: center;
+}
+
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+figcaption{
+  font-size: smaller;
+  text-align: center;
+}
+
+#featured-property p{
+  width: 800px;
+  text-align: center;
+ 
+}
+
 body {
   width: 100%;
   height: 100%;
